# program-markers

./: .pre-commit-config.yaml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  build_python_wheel_docker.sh  build_python_wheel_local.sh  mypy.ini  pyproject.toml  setup.cfg  setup.py.in  vulture_whitelist.py
.github/workflows/: format-cpp.yaml  lint-python.yaml  test-cpp.yaml  test-python.yaml
python_src/dead_instrumenter/: __init__.py  instrumenter.py  utils.py
python_src/program_markers/: instrumenter.py  iprogram.py  marker_strategies.py  markers.py
python_src/test/: dce_and_vr_instrument_test.py  dce_instrumenter_test.py  instrumented_program_test.py  instrumenter_test.py  preprocessing_test.py  serialization_test.py  tracked_markers_test.py  utils.py  vr_instrumenter_test.py
src/: ASTEdits.cpp  ASTEdits.h  CMakeLists.txt  CommandLine.cpp  CommandLine.h  Common.cpp  Common.hpp  DCEInstrumenter.cpp  DCEInstrumenter.h  DeadInstrumenter.cpp  DeadInstrumenter.h  DeadInstrumenter.hpp  GlobalStaticMaker.cpp  GlobalStaticMaker.h  Matchers.cpp  Matchers.h  RangeSelectors.cpp  RangeSelectors.h  ValueRangeInstrumenter.cpp  ValueRangeInstrumenter.h  ValueRangeTagger.cpp  ValueRangeTagger.hpp  ValueTagger.cpp  ValueTagger.hpp  VersionChecks.cpp
src/tool/: CMakeLists.txt  DeadInstrument.cpp  ProgramMarkers.cpp
test/: CMakeLists.txt  canonicalize_test.cpp  dce_marker_test.cpp  marker_test.cpp  marker_test_disable_macros.cpp  print_diff.cpp  print_diff.hpp  static_global_test.cpp  test_tool.cpp  test_tool.h  test_tool.hpp  vr_marker_test.cpp
test/dtl/: Diff.hpp  Diff3.hpp  Lcs.hpp  Sequence.hpp  Ses.hpp  dtl.hpp  functors.hpp  variables.hpp
