[metadata]
name = dead_instrumenter
version = 0.1.1
author = Theodoros Theodoridis
author_email = theodort@inf.ethz.ch
description = A C/C++ code instrumenter used in DEAD
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
url = https://github.com/DeadCodeProductions/dead_instrumenter

classifiers =
    Programming Language :: Python :: 3



[options]
packages=find:
python_requires = >= 3.10
include_package_data = True

[options.packages.find]
where=python_src
