[metadata]
name = dead_instrumenter
version = 0.3.3
author = Theodoros Theodoridis
author_email = theodort@inf.ethz.ch
description = A C/C++ code instrumenter used in DEAD
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
url = https://github.com/DeadCodeProductions/dead_instrumenter

classifiers =
    Programming Language :: Python :: 3



[options]
packages=find:
python_requires = >= 3.10
include_package_data = True
install_requires =
    diopter >= 0.0.13

[options.packages.find]
where=python_src

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = vulture_whitelist.py
