[metadata]
name = program-markers
version = 0.5.5b
author = Theodoros Theodoridis
author_email = theodort@inf.ethz.ch
description = Inserts markers in C/C++ code. Markers expose information about the optimizations a compiler has applied, e.g., whether a piece of code was dead code eliminated.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
url = https://github.com/DeadCodeProductions/program-markers

classifiers =
    Programming Language :: Python :: 3



[options]
packages=find:
python_requires = >= 3.10
include_package_data = True
install_requires =
    diopter >= 0.0.26

[options.packages.find]
where=python_src

[flake8]
max-line-length = 88
extend-ignore = E203
